tablet, phone queries. alignment fixes. js media queries.

--- a/general.css
+++ b/general.css
@@ -77,6 +77,7 @@ body {
 .section {
   padding: 12rem 0;
   margin-bottom: 8rem;
+  min-height: 100vh;
 }
 
 .container {
